<resources>
    <string name="app_name">iFOUND</string>
    <string name="web_client_id">675424588910-4fd515md3g0pcd8i0tt6ldba346iufu4.apps.googleusercontent.com</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="bt_login">Log In</string>
    <string name="bt_login_w_G">Log In with Google</string>
    <string name="clickable_acc_signup">Dont have an account yet? Sign up</string>
    <string name="afEmail">Password</string>
    <string name="iv_iTrackLogo">iTrack</string>
    <string name="iv_iTracklabel">label</string>
    <string name="HintEmail">Email Address</string>
    <string name="HintPass">Password</string>
    <string name="cEmail">Email</string>
    <string name="btn_forgot_password">Forgot Password?</string>


    <string name="txt_lost_item_form_q_1">What have you lost?</string>
    <string name="txt_lost_item_form_q_2">Where did you lose it?</string>
    <string name="txt_lost_item_form_q_3">When did you lose it?</string>
    <string name="txt_lost_item_form_q_4">Any specifics?</string>
    <string name="txt_lost_item_form_add_btn">+ Add a photo</string>
    <string name="txt_lost_item_form_cancel_btn">Cancel</string>
    <string name="txt_lost_item_form_submit_btn">Submit</string>

    <string name="txt_lost_item_page_item_name">Item Name</string>
    <string name="txt_lost_item_page_last_seen_header">Last seen:</string>
    <string name="txt_lost_item_page_last_seen_body">Insert Text Here</string>
    <string name="txt_lost_item_page_floor_num_header">Room number/Floor</string>
    <string name="txt_lost_item_page_floor_num_body">Insert Text Here</string>
    <string name="txt_lost_item_page_lost_by_header">Lost by:</string>
    <string name="txt_lost_item_page_lost_by_body">Insert Text Here</string>
    <string name="txt_lost_item_page_contact_info_header">Contact Information:</string>
    <string name="txt_lost_item_page_contact_info_number">xx-xxx-xxx</string>
    <string name="txt_lost_item_page_contact_info_email">Insert Text Here</string>

    <!-- I realize na I could have reused some of these, pero too late. lol-->

    <string name="txt_found_page_item_name">Item Name</string>
    <string name="txt_found_page_found_by_header">Found by:</string>
    <string name="txt_found_page_found_by_body">Insert Text Here</string>
    <string name="txt_found_page_contact_info_header">Contact Information:</string>
    <string name="txt_found_page_contact_info_body">Insert Text Here</string>
    <string name="txt_found_page_contact_info_number">xx-xxx-xxx</string>
    <string name="txt_found_page_contact_info_email">Insert Text Here</string>
    <string name="testing">test!</string>

    <string name="name">Name</string>
    <string name="re_enter_pw">Re-Enter Password</string>
    <string name="bt_signup">Sign Up</string>
    <string name="bt_signup_w_G">Sign Up with Google</string>


    <string name="contentDecription_nested_foundItemForm">Nested Scroll View</string>
    <string name="contentDecription_iv1_foundItemForm">title</string>
    <string name="contentDecription_iv2_foundItemForm">hand image</string>
    <string name="tv_whatHaveYouFound_foundItemForm">What have you found?</string>
    <string name="et_hint1_foundItem_foundItemForm">I found a...</string>
    <string name="tv_additionalInfo_foundItemForm">Any additional information about the item?</string>
    <string name="et_hint2_additionalInfo_foundItemForm"> </string>
    <string name="tv_where_foundItemForm">Where did you find it?</string>
    <string name="et_hint3_where_foundItemForm">ex: Found it under the table in Jimini, \n5th floor...</string>
    <string name="tv_room_foundItemForm">Room Number/ Floor</string>
    <string name="et_hint4_room_foundItemForm">ex: 1005-N...</string>
    <string name="tv_name_foundItemForm">What’s your name?</string>
    <string name="et_hint5_name_foundItemForm">ex:John Doe...</string>
    <string name="tv_phone_foundItemForm">Contact Number</string>
    <string name="et_hint6_phone_foundItemForm">ex: 097842143...</string>
    <string name="tv_email_foundItemForm">Email Address</string>
    <string name="et_hint7_email_foundItemForm">ex: john.doe@email.com...</string>
    <string name="bt_add_Photo_foundItemForm">+ add a photo</string>

    <string name="tv_user_name_fragmentProfile">John Doe Garcia</string>
    <string name="tv_user_email_fragmentProfile">johndoe.garcia@gmail.com</string>
    <string name="bt_my_reports_fragmentProfile">My Reports</string>
    <string name="bt_my_found_items_fragmentProfile">My Found items</string>

    <string name="tv_current_stars">You currently \nhave 0 stars</string>
    <string name="tv_claim_reward">Claim your reward!</string>
    <string name="tv_claim_instruction">you must have enough \nstars to claim the reward that you want</string>
    <string name="tv_select">Select Reward:</string>
    <string name="tv_rewards_1">3 points-Id Lanyard</string>
    <string name="tv_rewards_2">5 points- \nJimini mini Pizza</string>
    <string name="tv_rewards_3">7 points- \nLarge Fries</string>
    <string name="tv_rewards_4">10 points- \nFree Regular Drink</string>
    <string name="btn_claim_reward">Claim reward</string>
    <string name="btn_back_to_login">back to login</string>

    <string name="btn_date_picker">mm/dd/yyyy</string>


    <string name="tv_email_pw_recovery">Please enter your email to recover your account</string>

    <string name="tv_lost_item">Lost Item</string>
    <string name="btn_iFound_this_item">iFOUND THIS ITEM</string>

    <string name="btn_delete">delete</string>

    <string name="tv_found_item">Found Item</string>
    <string name="btn_claim_item">Claim Item</string>

    <string name="specifics">Aliquam tincidunt mauris eu risus.\nVestibulum auctor dapibus neque.
    \nNunc dignissim risus id metus.</string>

    <string name="et_hintFeatures"><i>including any unique identifying features...</i></string>

    <string name="test_two">Test Commit></string>
    <string name="title_activity_logs_admin">LogsAdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>