<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_I_Found_foundItemForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".FoundItemFormActivity">

    <ScrollView
        android:id="@+id/ns_FoundItemForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contentDecription_nested_foundItemForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_1_foundItemForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/iv_title_foundItemForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/contentDecription_iv1_foundItemForm"
                    android:src="@drawable/found_something_title" />

                <ImageView
                    android:id="@+id/iv_hand_foundItemForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="50dp"
                    android:contentDescription="@string/contentDecription_iv2_foundItemForm"
                    android:src="@drawable/hand" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_what_have_you_found_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:labelFor="@id/et_what_have_you_found_foundItemForm"
                android:text="@string/tv_whatHaveYouFound_foundItemForm"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_what_have_you_found_foundItemForm"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hint1_foundItem_foundItemForm"
                android:includeFontPadding="true"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="#000"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_any_additional_info_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:labelFor="@id/et_any_additional_info_foundItemForm"
                android:text="@string/txt_lost_item_form_q_4"
                android:textColor="#000"
                android:textSize="18sp" />

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rg_specifics"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbtn_electronics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Electronics"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:fontFamily="@font/semibold"
                        android:textSize="12dp"
                        android:textColor="@drawable/radio_text_selector"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/radio_null_button"
                        android:layout_marginEnd="5dp"/>
                    <RadioButton
                        android:id="@+id/rbtn_clothing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Clothing"
                        android:padding="10dp"
                        android:fontFamily="@font/semibold"
                        android:textSize="12dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selector"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/radio_null_button"
                        android:layout_marginEnd="5dp"/>
                    <RadioButton
                        android:id="@+id/rbtn_documents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Documents"
                        android:padding="10dp"
                        android:fontFamily="@font/semibold"
                        android:textSize="12dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selector"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/radio_null_button"
                        android:layout_marginEnd="5dp"/>
                    <RadioButton
                        android:id="@+id/rbtn_others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Others... "
                        android:textSize="12dp"
                        android:padding="10dp"
                        android:fontFamily="@font/semibold"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selector"
                        android:background="@drawable/radio_selector"
                        android:button="@drawable/radio_null_button"/>

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_where_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:labelFor="@id/tv_I_Found_foundItemForm"
                android:text="@string/tv_where_foundItemForm"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_i_lost_my_LostForm"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hint3_where_foundItemForm"
                android:includeFontPadding="true"
                android:inputType="text"
                android:paddingBottom="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textColor="#000"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/tv_room_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:labelFor="@id/tv_I_Found_foundItemForm"
                android:text="@string/tv_room_foundItemForm"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_room_foundItemForm"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hint4_room_foundItemForm"
                android:includeFontPadding="true"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="#000"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/tv_name_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:labelFor="@id/et_name_foundItemForm"
                android:text="@string/tv_name_foundItemForm"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_name_foundItemForm"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hint5_name_foundItemForm"
                android:includeFontPadding="true"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="#000"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_phone_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:labelFor="@id/tv_phone_foundItemForm"
                android:text="@string/tv_phone_foundItemForm"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_phone_foundItemForm"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hint6_phone_foundItemForm"
                android:includeFontPadding="true"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="#000"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/tv_email_foundItemForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:labelFor="@id/et_email_foundItemForm"
                android:text="@string/tv_email_foundItemForm"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_email_foundItemForm"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hint7_email_foundItemForm"
                android:includeFontPadding="true"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="#000"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_photo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/bt_add_Photo_foundItemForm"
                android:background="@drawable/bg_button_add_photo"/>

            <LinearLayout
                android:id="@+id/ll_3_foundItemForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_button_glogin"
                    android:text="@string/txt_lost_item_form_cancel_btn"
                    android:textColor="@color/white"
                    android:fontFamily="@font/semibold" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/bg_button_login"
                    android:text="@string/txt_lost_item_form_submit_btn"
                    android:textColor="@color/white"
                    android:fontFamily="@font/semibold"/>

            </LinearLayout>

        </LinearLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>